<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>no.nav.foreldrepenger.felles</groupId>
        <artifactId>fp-bom</artifactId>
        <version>3.6.5</version>
    </parent>

    <groupId>no.nav.foreldrepenger.fordel</groupId>
    <artifactId>fpfordel</artifactId>
    <version>2.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>Fordel :: Root</name>

    <description>Fordeling av mottatte dokumenter for FPSAK</description>
    <modules>
        <module>migreringer</module>
        <module>domene</module>
        <module>web</module>
    </modules>
    <licenses>
        <license>
            <name>MIT License</name>
            <url>https://opensource.org/licenses/MIT</url>
        </license>
    </licenses>
    <properties>
        <java.version>21</java.version>

        <sonar.moduleKey>${project.artifactId}</sonar.moduleKey>
        <sonar.projectName>fp-fordel</sonar.projectName>
        <sonar.projectKey>navikt_fpfordel</sonar.projectKey>

        <felles.version>7.4.13</felles.version>
        <prosesstask.version>5.1.4</prosesstask.version>
        <fp-kontrakter.version>9.2.4</fp-kontrakter.version>

        <!-- Eksterne -->
        <confluent.version>7.9.0</confluent.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>no.nav.foreldrepenger.felles</groupId>
                <artifactId>fp-bom</artifactId>
                <version>3.6.5</version>
                <scope>import</scope>
                <type>pom</type>
            </dependency>

            <dependency>
                <groupId>no.nav.foreldrepenger.felles</groupId>
                <artifactId>felles</artifactId>
                <version>${felles.version}</version>
                <scope>import</scope>
                <type>pom</type>
            </dependency>
            <dependency>
                <groupId>no.nav.foreldrepenger.felles.integrasjon</groupId>
                <artifactId>felles-integrasjon-pom</artifactId>
                <version>${felles.version}</version>
                <scope>import</scope>
                <type>pom</type>
            </dependency>
            <dependency>
                <!-- Importeres etter felles-root og felles for å sikre samme avhengigheter gjennom hele! -->
                <groupId>no.nav.vedtak.prosesstask</groupId>
                <artifactId>prosesstask-root</artifactId>
                <version>${prosesstask.version}</version>
                <scope>import</scope>
                <type>pom</type>
            </dependency>

            <dependency>
                <groupId>no.nav.foreldrepenger.felles.integrasjon</groupId>
                <artifactId>arbeidsfordeling-klient</artifactId>
                <version>${felles.version}</version>
            </dependency>
            <dependency>
                <groupId>no.nav.foreldrepenger.felles.integrasjon</groupId>
                <artifactId>saf-klient</artifactId>
                <version>${felles.version}</version>
            </dependency>
            <dependency>
                <groupId>no.nav.foreldrepenger.felles.integrasjon</groupId>
                <artifactId>oppgave-rest-klient</artifactId>
                <version>${felles.version}</version>
            </dependency>
            <dependency>
                <groupId>no.nav.foreldrepenger.felles.integrasjon</groupId>
                <artifactId>person-klient</artifactId>
                <version>${felles.version}</version>
            </dependency>
            <dependency>
                <groupId>no.nav.foreldrepenger.felles.integrasjon</groupId>
                <artifactId>dokarkiv-klient</artifactId>
                <version>${felles.version}</version>
            </dependency>
            <dependency>
                <groupId>no.nav.foreldrepenger.felles.integrasjon</groupId>
                <artifactId>kafka-properties</artifactId>
                <version>${felles.version}</version>
            </dependency>

            <dependency>
                <groupId>no.nav.foreldrepenger.kontrakter</groupId>
                <artifactId>fp-kontrakter-root</artifactId>
                <version>${fp-kontrakter.version}</version>
                <scope>import</scope>
                <type>pom</type>
            </dependency>
            <dependency>
                <groupId>no.nav.foreldrepenger.fordel</groupId>
                <artifactId>domene</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>no.nav.foreldrepenger.fordel</groupId>
                <artifactId>migreringer</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>no.nav.foreldrepenger.fordel</groupId>
                <artifactId>migreringer</artifactId>
                <version>${project.version}</version>
                <type>test-jar</type>
            </dependency>
            <dependency>
                <groupId>no.nav.foreldrepenger.fordel</groupId>
                <artifactId>webapp</artifactId>
                <version>${project.version}</version>
            </dependency>

            <!-- Fikser security warning - kan fjernes om avro bumper selv. -->
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-compress</artifactId>
                <version>1.27.1</version>
            </dependency>
            <dependency>
                <groupId>io.confluent</groupId>
                <artifactId>kafka-schema-registry-client</artifactId>
                <version>${confluent.version}</version>
            </dependency>
            <dependency>
                <groupId>io.confluent</groupId>
                <artifactId>kafka-avro-serializer</artifactId>
                <version>${confluent.version}</version>
            </dependency>
            <dependency>
                <groupId>no.nav.teamdokumenthandtering</groupId>
                <artifactId>teamdokumenthandtering-avro-schemas</artifactId>
                <version>1.1.6</version>
            </dependency>
            <dependency>
                <groupId>org.testcontainers</groupId>
                <artifactId>testcontainers-bom</artifactId>
                <version>1.20.6</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>no.nav.foreldrepenger.felles</groupId>
            <artifactId>felles-konfig</artifactId>
        </dependency>
        <dependency>
            <groupId>no.nav.foreldrepenger.felles</groupId>
            <artifactId>felles-testutilities</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.oracle.ojdbc</groupId>
            <artifactId>ojdbc8</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.testcontainers</groupId>
            <artifactId>oracle-free</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <artifactId>maven-deploy-plugin</artifactId>
                <configuration>
                    <deployAtEnd>true</deployAtEnd>
                    <skip>true</skip>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <scm>
        <connection>scm:git:ssh://git@github.com:navikt/fpfordel.git</connection>
        <developerConnection>scm:git:ssh://git@github.com:navikt/fpfordel.git</developerConnection>
        <url>https://github.com/navikt/fpfordel</url>
    </scm>

    <distributionManagement>
        <repository>
            <id>github</id>
            <name>Github navikt Maven Packages</name>
            <url>https://maven.pkg.github.com/navikt/fpfordel</url>
        </repository>
    </distributionManagement>

    <repositories>
        <repository>
            <id>confluent</id>
            <url>https://packages.confluent.io/maven/</url>
        </repository>
        <repository>
            <id>dok-github</id>
            <url>https://maven.pkg.github.com/navikt/teamdokumenthandtering-avro-schemas</url>
        </repository>
    </repositories>
</project>
